update jvm finetuning&&客户端入门